module/luarocks/parser/lua_parser.go
// Code generated from C:/Users/iseki/working/client/module/luarocks/parser/LuaParser.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // LuaParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type LuaParser struct {
	*antlr.BaseParser
}

var LuaParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func luaparserParserInit() {
	staticData := &LuaParserParserStaticData
	staticData.LiteralNames = []string{
		"", "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", "'repeat'",
		"'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", "','", "'in'",
		"'function'", "'local'", "'<'", "'>'", "'return'", "'continue'", "'::'",
		"'nil'", "'false'", "'true'", "'.'", "'~'", "'-'", "'#'", "'('", "')'",
		"'not'", "'<<'", "'>>'", "'&'", "'//'", "'%'", "':'", "'<='", "'>='",
		"'and'", "'or'", "'+'", "'*'", "'{'", "'}'", "'['", "']'", "'=='", "'..'",
		"'|'", "'^'", "'/'", "'...'", "'~='",
	}
	staticData.SymbolicNames = []string{
		"", "SEMI", "EQ", "BREAK", "GOTO", "DO", "END", "WHILE", "REPEAT", "UNTIL",
		"IF", "THEN", "ELSEIF", "ELSE", "FOR", "COMMA", "IN", "FUNCTION", "LOCAL",
		"LT", "GT", "RETURN", "CONTINUE", "CC", "NIL", "FALSE", "TRUE", "DOT",
		"SQUIG", "MINUS", "POUND", "OP", "CP", "NOT", "LL", "GG", "AMP", "SS",
		"PER", "COL", "LE", "GE", "AND", "OR", "PLUS", "STAR", "OCU", "CCU",
		"OB", "CB", "EE", "DD", "PIPE", "CARET", "SLASH", "DDD", "SQEQ", "NAME",
		"NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT",
		"COMMENT", "WS", "NL", "SHEBANG",
	}
	staticData.RuleNames = []string{
		"start_", "chunk", "block", "stat", "attnamelist", "attrib", "retstat",
		"label", "funcname", "varlist", "namelist", "explist", "exp", "var",
		"prefixexp", "functioncall", "args", "functiondef", "funcbody", "parlist",
		"tableconstructor", "fieldlist", "field", "fieldsep", "number", "string",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// LuaParserInit initializes any static state used to implement LuaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewLuaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func LuaParserInit() {
	staticData := &LuaParserParserStaticData
	staticData.once.Do(luaparserParserInit)
}

// NewLuaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewLuaParser(input antlr.TokenStream) *LuaParser {
	LuaParserInit()
	this := new(LuaParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &LuaParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "LuaParser.g4"

	return this
}

// LuaParser tokens.
const (
	LuaParserEOF          = antlr.TokenEOF
	LuaParserSEMI         = 1
	LuaParserEQ           = 2
	LuaParserBREAK        = 3
	LuaParserGOTO         = 4
	LuaParserDO           = 5
	LuaParserEND          = 6
	LuaParserWHILE        = 7
	LuaParserREPEAT       = 8
	LuaParserUNTIL        = 9
	LuaParserIF           = 10
	LuaParserTHEN         = 11
	LuaParserELSEIF       = 12
	LuaParserELSE         = 13
	LuaParserFOR          = 14
	LuaParserCOMMA        = 15
	LuaParserIN           = 16
	LuaParserFUNCTION     = 17
	LuaParserLOCAL        = 18
	LuaParserLT           = 19
	LuaParserGT           = 20
	LuaParserRETURN       = 21
	LuaParserCONTINUE     = 22
	LuaParserCC           = 23
	LuaParserNIL          = 24
	LuaParserFALSE        = 25
	LuaParserTRUE         = 26
	LuaParserDOT          = 27
	LuaParserSQUIG        = 28
	LuaParserMINUS        = 29
	LuaParserPOUND        = 30
	LuaParserOP           = 31
	LuaParserCP           = 32
	LuaParserNOT          = 33
	LuaParserLL           = 34
	LuaParserGG           = 35
	LuaParserAMP          = 36
	LuaParserSS           = 37
	LuaParserPER          = 38
	LuaParserCOL          = 39
	LuaParserLE           = 40
	LuaParserGE           = 41
	LuaParserAND          = 42
	LuaParserOR           = 43
	LuaParserPLUS         = 44
	LuaParserSTAR         = 45
	LuaParserOCU          = 46
	LuaParserCCU          = 47
	LuaParserOB           = 48
	LuaParserCB           = 49
	LuaParserEE           = 50
	LuaParserDD           = 51
	LuaParserPIPE         = 52
	LuaParserCARET        = 53
	LuaParserSLASH        = 54
	LuaParserDDD          = 55
	LuaParserSQEQ         = 56
	LuaParserNAME         = 57
	LuaParserNORMALSTRING = 58
	LuaParserCHARSTRING   = 59
	LuaParserLONGSTRING   = 60
	LuaParserINT          = 61
	LuaParserHEX          = 62
	LuaParserFLOAT        = 63
	LuaParserHEX_FLOAT    = 64
	LuaParserCOMMENT      = 65
	LuaParserWS           = 66
	LuaParserNL           = 67
	LuaParserSHEBANG      = 68
)

// LuaParser rules.
const (
	LuaParserRULE_start_           = 0
	LuaParserRULE_chunk            = 1
	LuaParserRULE_block            = 2
	LuaParserRULE_stat             = 3
	LuaParserRULE_attnamelist      = 4
	LuaParserRULE_attrib           = 5
	LuaParserRULE_retstat          = 6
	LuaParserRULE_label            = 7
	LuaParserRULE_funcname         = 8
	LuaParserRULE_varlist          = 9
	LuaParserRULE_namelist         = 10
	LuaParserRULE_explist          = 11
	LuaParserRULE_exp              = 12
	LuaParserRULE_var              = 13
	LuaParserRULE_prefixexp        = 14
	LuaParserRULE_functioncall     = 15
	LuaParserRULE_args             = 16
	LuaParserRULE_functiondef      = 17
	LuaParserRULE_funcbody         = 18
	LuaParserRULE_parlist          = 19
	LuaParserRULE_tableconstructor = 20
	LuaParserRULE_fieldlist        = 21
	LuaParserRULE_field            = 22
	LuaParserRULE_fieldsep         = 23
	LuaParserRULE_number           = 24
	LuaParserRULE_string           = 25
)

// IStart_Context is an interface to support dynamic dispatch.
type IStart_Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Chunk() IChunkContext
	EOF() antlr.TerminalNode

	// IsStart_Context differentiates from other interfaces.
	IsStart_Context()
}

type Start_Context struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStart_Context() *Start_Context {
	var p = new(Start_Context)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_start_
	return p
}

func InitEmptyStart_Context(p *Start_Context) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_start_
}

func (*Start_Context) IsStart_Context() {}

func NewStart_Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Start_Context {
	var p = new(Start_Context)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuaParserRULE_start_

	return p
}

func (s *Start_Context) GetParser() antlr.Parser { return s.parser }

func (s *Start_Context) Chunk() IChunkContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IChunkContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IChunkContext)
}

func (s *Start_Context) EOF() antlr.TerminalNode {
	return s.GetToken(LuaParserEOF, 0)
}

func (s *Start_Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Start_Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Start_Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuaParserListener); ok {
		listenerT.EnterStart_(s)
	}
}

func (s *Start_Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuaParserListener); ok {
		listenerT.ExitStart_(s)
	}
}

func (s *Start_Context) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LuaParserVisitor:
		return t.VisitStart_(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LuaParser) Start_() (localctx IStart_Context) {
	localctx = NewStart_Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LuaParserRULE_start_)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Chunk()
	}
	{
		p.SetState(53)
		p.Match(LuaParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IChunkContext is an interface to support dynamic dispatch.
type IChunkContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Block() IBlockContext

	// IsChunkContext differentiates from other interfaces.
	IsChunkContext()
}

type ChunkContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyChunkContext() *ChunkContext {
	var p = new(ChunkContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_chunk
	return p
}

func InitEmptyChunkContext(p *ChunkContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_chunk
}

func (*ChunkContext) IsChunkContext() {}

func NewChunkContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ChunkContext {
	var p = new(ChunkContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuaParserRULE_chunk

	return p
}

func (s *ChunkContext) GetParser() antlr.Parser { return s.parser }

func (s *ChunkContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ChunkContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ChunkContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ChunkContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuaParserListener); ok {
		listenerT.EnterChunk(s)
	}
}

func (s *ChunkContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuaParserListener); ok {
		listenerT.ExitChunk(s)
	}
}

func (s *ChunkContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LuaParserVisitor:
		return t.VisitChunk(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LuaParser) Chunk() (localctx IChunkContext) {
	localctx = NewChunkContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LuaParserRULE_chunk)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(55)
		p.Block()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStat() []IStatContext
	Stat(i int) IStatContext
	Retstat() IRetstatContext

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_block
	return p
}

func InitEmptyBlockContext(p *BlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_block
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuaParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) AllStat() []IStatContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatContext); ok {
			len++
		}
	}

	tst := make([]IStatContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatContext); ok {
			tst[i] = t.(IStatContext)
			i++
		}
	}

	return tst
}

func (s *BlockContext) Stat(i int) IStatContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatContext)
}

func (s *BlockContext) Retstat() IRetstatContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRetstatContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRetstatContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuaParserListener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuaParserListener); ok {
		listenerT.ExitBlock(s)
	}
}

func (s *BlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LuaParserVisitor:
		return t.VisitBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LuaParser) Block() (localctx IBlockContext) {
	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LuaParserRULE_block)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(57)
				p.Stat()
			}

		}
		p.SetState(62)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&6291464) != 0 {
		{
			p.SetState(63)
			p.Retstat()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatContext is an interface to support dynamic dispatch.
type IStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SEMI() antlr.TerminalNode
	Varlist() IVarlistContext
	EQ() antlr.TerminalNode
	Explist() IExplistContext
	Functioncall() IFunctioncallContext
	Label() ILabelContext
	BREAK() antlr.TerminalNode
	GOTO() antlr.TerminalNode
	NAME() antlr.TerminalNode
	DO() antlr.TerminalNode
	AllBlock() []IBlockContext
	Block(i int) IBlockContext
	END() antlr.TerminalNode
	WHILE() antlr.TerminalNode
	AllExp() []IExpContext
	Exp(i int) IExpContext
	REPEAT() antlr.TerminalNode
	UNTIL() antlr.TerminalNode
	IF() antlr.TerminalNode
	AllTHEN() []antlr.TerminalNode
	THEN(i int) antlr.TerminalNode
	AllELSEIF() []antlr.TerminalNode
	ELSEIF(i int) antlr.TerminalNode
	ELSE() antlr.TerminalNode
	FOR() antlr.TerminalNode
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode
	Namelist() INamelistContext
	IN() antlr.TerminalNode
	FUNCTION() antlr.TerminalNode
	Funcname() IFuncnameContext
	Funcbody() IFuncbodyContext
	LOCAL() antlr.TerminalNode
	Attnamelist() IAttnamelistContext

	// IsStatContext differentiates from other interfaces.
	IsStatContext()
}

type StatContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatContext() *StatContext {
	var p = new(StatContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_stat
	return p
}

func InitEmptyStatContext(p *StatContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_stat
}

func (*StatContext) IsStatContext() {}

func NewStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatContext {
	var p = new(StatContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuaParserRULE_stat

	return p
}

func (s *StatContext) GetParser() antlr.Parser { return s.parser }

func (s *StatContext) SEMI() antlr.TerminalNode {
	return s.GetToken(LuaParserSEMI, 0)
}

func (s *StatContext) Varlist() IVarlistContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVarlistContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVarlistContext)
}

func (s *StatContext) EQ() antlr.TerminalNode {
	return s.GetToken(LuaParserEQ, 0)
}

func (s *StatContext) Explist() IExplistContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExplistContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExplistContext)
}

func (s *StatContext) Functioncall() IFunctioncallContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctioncallContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctioncallContext)
}

func (s *StatContext) Label() ILabelContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILabelContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILabelContext)
}

func (s *StatContext) BREAK() antlr.TerminalNode {
	return s.GetToken(LuaParserBREAK, 0)
}

func (s *StatContext) GOTO() antlr.TerminalNode {
	return s.GetToken(LuaParserGOTO, 0)
}

func (s *StatContext) NAME() antlr.TerminalNode {
	return s.GetToken(LuaParserNAME, 0)
}

func (s *StatContext) DO() antlr.TerminalNode {
	return s.GetToken(LuaParserDO, 0)
}

func (s *StatContext) AllBlock() []IBlockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBlockContext); ok {
			len++
		}
	}

	tst := make([]IBlockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBlockContext); ok {
			tst[i] = t.(IBlockContext)
			i++
		}
	}

	return tst
}

func (s *StatContext) Block(i int) IBlockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *StatContext) END() antlr.TerminalNode {
	return s.GetToken(LuaParserEND, 0)
}

func (s *StatContext) WHILE() antlr.TerminalNode {
	return s.GetToken(LuaParserWHILE, 0)
}

func (s *StatContext) AllExp() []IExpContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExpContext); ok {
			len++
		}
	}

	tst := make([]IExpContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExpContext); ok {
			tst[i] = t.(IExpContext)
			i++
		}
	}

	return tst
}

func (s *StatContext) Exp(i int) IExpContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpContext)
}

func (s *StatContext) REPEAT() antlr.TerminalNode {
	return s.GetToken(LuaParserREPEAT, 0)
}

func (s *StatContext) UNTIL() antlr.TerminalNode {
	return s.GetToken(LuaParserUNTIL, 0)
}

func (s *StatContext) IF() antlr.TerminalNode {
	return s.GetToken(LuaParserIF, 0)
}

func (s *StatContext) AllTHEN() []antlr.TerminalNode {
	return s.GetTokens(LuaParserTHEN)
}

func (s *StatContext) THEN(i int) antlr.TerminalNode {
	return s.GetToken(LuaParserTHEN, i)
}

func (s *StatContext) AllELSEIF() []antlr.TerminalNode {
	return s.GetTokens(LuaParserELSEIF)
}

func (s *StatContext) ELSEIF(i int) antlr.TerminalNode {
	return s.GetToken(LuaParserELSEIF, i)
}

func (s *StatContext) ELSE() antlr.TerminalNode {
	return s.GetToken(LuaParserELSE, 0)
}

func (s *StatContext) FOR() antlr.TerminalNode {
	return s.GetToken(LuaParserFOR, 0)
}

func (s *StatContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(LuaParserCOMMA)
}

func (s *StatContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(LuaParserCOMMA, i)
}

func (s *StatContext) Namelist() INamelistContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamelistContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamelistContext)
}

func (s *StatContext) IN() antlr.TerminalNode {
	return s.GetToken(LuaParserIN, 0)
}

func (s *StatContext) FUNCTION() antlr.TerminalNode {
	return s.GetToken(LuaParserFUNCTION, 0)
}

func (s *StatContext) Funcname() IFuncnameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncnameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncnameContext)
}

func (s *StatContext) Funcbody() IFuncbodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncbodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncbodyContext)
}

func (s *StatContext) LOCAL() antlr.TerminalNode {
	return s.GetToken(LuaParserLOCAL, 0)
}

func (s *StatContext) Attnamelist() IAttnamelistContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAttnamelistContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAttnamelistContext)
}

func (s *StatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuaParserListener); ok {
		listenerT.EnterStat(s)
	}
}

func (s *StatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuaParserListener); ok {
		listenerT.ExitStat(s)
	}
}

func (s *StatContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LuaParserVisitor:
		return t.VisitStat(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LuaParser) Stat() (localctx IStatContext) {
	localctx = NewStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, LuaParserRULE_stat)
	var _la int

	p.SetState(147)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(66)
			p.Match(LuaParserSEMI)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
